fixed the blurred background spacing

--- a/frontend/src/components/layout/getStarted/modal/GetStartedModal.module.css
+++ b/frontend/src/components/layout/getStarted/modal/GetStartedModal.module.css
@@ -3,9 +3,9 @@
     position: fixed;
     z-index: 1000;
     backdrop-filter: blur(6px);
-    top: -56px;
-    height: calc(100vh + 56px);
+    height: 100vh;
     width: 100vw;
+    top: 0px;
     left: 0%;
     margin: 0;
     padding: 0;
