--- a/frontend/src/components/layout/header/mainNavbar.module.css
+++ b/frontend/src/components/layout/header/mainNavbar.module.css
@@ -3,11 +3,10 @@
     position: static;
     justify-content: center;
     align-items: center;
-    height: 56px;
+    height: 48px;
     width: 100%;
     max-width: 3840px;
-    margin: 0px auto 8px auto;
-    padding-top: 8px;
+    margin: 8px auto 8px auto;
 }
 
 .inner_container_nav {
@@ -18,6 +17,7 @@
     height: 48px;
     width: 100%;
     padding: 0;
+    padding-top: 12px;
     margin: 0;
     color: var(--white);
 }
