--- a/frontend/src/components/layout/header/navbarMenu.module.css
+++ b/frontend/src/components/layout/header/navbarMenu.module.css
@@ -3,13 +3,13 @@
     position: fixed;
     z-index: 1000;
     backdrop-filter: blur(6px);
-    top: -56px;
-    height: calc(100vh + 56px);
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    top:0px;
     background-color: rgb(175, 175, 175, 40%);
     justify-content: flex-end;
     align-items: center;
-    font-family: Roboto;
+    font-family: Roboto; 
 }
 
 .menuContainer {
@@ -23,8 +23,6 @@
     border-bottom-right-radius: 14px;
     height: 100vh;
     width: 410px;
-    top: 40px;
-    right: -3%;
     padding: 0px;
 }
 
@@ -35,7 +33,7 @@
     align-items: flex-start;
     margin: auto;
     width: 350px;
-    height: calc(100vh - 40px);
+    height: 100vh;
 }
 
 .orderedList{
